# seCall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  justfile
.github/workflows/: ci.yml
crates/secall/: Cargo.toml
crates/secall-core/: Cargo.toml
crates/secall-core/src/: lib.rs
crates/secall-core/src/graph/: build.rs  extract.rs  llm.rs  mod.rs  semantic.rs
crates/secall-core/src/hooks/: mod.rs
crates/secall-core/src/ingest/: chatgpt.rs  claude.rs  claude_ai.rs  codex.rs  detect.rs  gemini.rs  gemini_web.rs  lint.rs  markdown.rs  markdown_reparse.rs  mod.rs  opencode.rs  types.rs
crates/secall-core/src/llm/: defaults.rs  model_discovery.rs
crates/secall-core/src/mcp/: instructions.rs  rest.rs  server.rs  tools.rs
crates/secall-core/src/search/: bm25.rs  chunker.rs  embedding.rs  hybrid.rs  model_manager.rs  vector.rs
crates/secall-core/src/store/: db.rs  mod.rs  schema.rs  search_repo.rs  session_repo.rs  vector_repo.rs
crates/secall-core/src/vault/: config.rs  git.rs  index.rs  init.rs  mod.rs
crates/secall-core/src/wiki/: claude.rs  codex.rs  lint.rs  lmstudio.rs  mod.rs  ollama.rs  review.rs
crates/secall-core/src/wiki/reviewers/: claude.rs  codex.rs  haiku.rs  lmstudio.rs  mod.rs  ollama.rs
crates/secall-core/tests/: db_migrations.rs  llm_defaults.rs  rest_config.rs  rest_listing.rs  semantic_backends.rs  session_archive.rs  session_repo_helpers.rs  sync_termination.rs  vault_auto_commit.rs  vault_reparse_parity.rs  wiki_cross_host_resolve.rs  wiki_reviewers.rs
crates/secall-core/tests/common/: mod.rs
crates/secall/src/: main.rs
crates/secall/src/commands/: config.rs  embed.rs  graph.rs  ingest.rs  lint.rs  log.rs  migrate.rs  reindex.rs  serve.rs  status.rs  sync.rs  wiki.rs
crates/secall/tests/: config_llm_cli.rs  config_llm_test.rs  log_backend_resolve.rs  wiki_review_resolve.rs
docs/agents/: architect.md  developer.md  reviewer.md
docs/baseline/: p39-p40-decision.md
docs/community/: v0.10.0-release-notes.md  v0.10.1-release-notes.md  v0.9.1-release-notes.md
docs/plans/: index.md  p41-llm-daily-diary-web-result.md  p41-llm-daily-diary-web-review-r1.md  p41-llm-daily-diary-web-review-r2.md  p41-llm-daily-diary-web-task-01.md  p41-llm-daily-diary-web-task-02.md  p41-llm-daily-diary-web-task-03.md  p41-llm-daily-diary-web-task-04.md  p41-llm-daily-diary-web-task-05.md  p41-llm-daily-diary-web-task-06.md  p41-llm-daily-diary-web.md  p42-p41-llm-result.md  p42-p41-llm-review-r1.md  p42-p41-llm-review-r2.md  p42-p41-llm-review-r3.md  p42-p41-llm-review-r4.md  p42-p41-llm-task-01.md  p42-p41-llm-task-02.md  p42-p41-llm-task-03.md  p42-p41-llm-task-04.md  p42-p41-llm-task-05.md  (+61 more)
obsidian-secall/: package-lock.json
scripts/: soak-test.sh
web/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
(+61 files in other folders)
