[package]
name = "secall-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
dirs.workspace = true
walkdir.workspace = true
toml.workspace = true
lindera.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
async-trait.workspace = true
ort.workspace = true
ndarray.workspace = true
tokenizers.workspace = true
sha2.workspace = true
regex.workspace = true
futures-util.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
gethostname.workspace = true
serde_yaml.workspace = true
zip.workspace = true
uuid.workspace = true
sysinfo.workspace = true
tempfile = "3.27.0"
toml_edit = "0.25.8"
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
openvino = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[target.'cfg(all(not(target_os = "windows"), not(all(target_os = "linux", target_arch = "aarch64"))))'.dependencies]
kiwi-rs.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
usearch.workspace = true

[features]
default = ["web-ui"]
openvino = ["dep:openvino", "dep:libloading"]
web-ui = ["dep:rust-embed", "dep:mime_guess"]
coreml = ["ort/coreml"]

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
